--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,8 @@
             <input type="text" id="update-name-input">
             <button id="update-row-btn">Update</button>
         </section>
+        <h1 class="status"></h1>
+        <button  id="state">find my state</button>
     </main>
     <script src="index.js"></script>
 </body>
